<package format="3">
  <name>robosoccer_behaviour</name>
  <version>0.0.1</version>
  <description>Behavior tree node for RoboSoccer</description>
  <maintainer email="uwrobosoccer@gmail.com">UWRS</maintainer>
  <license>MIT</license>
  <build_type>ament_python</build_type>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
